@@ -1,8 +1,9 @@
 {
     "key":"MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqVkeimcHmKsjHDtmoH19r2XG1bFf6Dks3e8s6l+8LrS5SMY0FlJqTVNq5o3XR9jv8xk3v7Fxw79P2UR1SYgY1lwifIofjvB3ROylKmu3OvVxYaiJmPUoeGicyrjs4vRF9NuyQuvV1ltCpyA9dFqpsAai7neT8vpjgELbfddoE3OeDQ3u7ztG/tGxVjpBP5B1XcKPIU1IsJwfPZcvoL7lwaOL+8t0LFdMnlNCzkO+WsKG313oOvV+D1Fz/EEu4d7VfDOvQOwJ+DSFupd0Q0edLYKgh4LsOp42UCFABr+kS3O9CoNTgg8CBVpGQe3n1Yd+/jj0VUfdX7ZrIM3ilt7VmQIDAQAB",
-    "name": "JSTorrent Lite",
-    "short_name": "JSTorrent Lite",
-    "description": "A Torrent Client for Google Chrome, runs everywhere in pure JavaScript",
+    "default_locale":"en",
+    "name": "__MSG_extName__",
+    "short_name": "__MSG_extName__",
+    "description": "__MSG_extDescription__",
     "author": "Kyle Graehl",
     "version": "2.3.11",
     "manifest_version": 2,
@@ -63,7 +64,7 @@
                 "*://*.jstorrent.com/open*",
                 "*://jstorrent.com/open*"
             ],
-            "title": "Open in JSTorrent"
+            "title": "Open in __MSG_extName__"
         }
     },
     "externally_connectable": {
