@@ -4,4 +4,6 @@
 // jstorrent lite
     "key":"MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAqVkeimcHmKsjHDtmoH19r2XG1bFf6Dks3e8s6l+8LrS5SMY0FlJqTVNq5o3XR9jv8xk3v7Fxw79P2UR1SYgY1lwifIofjvB3ROylKmu3OvVxYaiJmPUoeGicyrjs4vRF9NuyQuvV1ltCpyA9dFqpsAai7neT8vpjgELbfddoE3OeDQ3u7ztG/tGxVjpBP5B1XcKPIU1IsJwfPZcvoL7lwaOL+8t0LFdMnlNCzkO+WsKG313oOvV+D1Fz/EEu4d7VfDOvQOwJ+DSFupd0Q0edLYKgh4LsOp42UCFABr+kS3O9CoNTgg8CBVpGQe3n1Yd+/jj0VUfdX7ZrIM3ilt7VmQIDAQAB",
 
-// when packaging, this key can't be present, but it's good for testing to have it in the manifest
+// dev
+    "key":"MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuCxw/LSpd6+9Pf+SMaJHAAU4fMh5572mEcLpYM4Rnoi9GVvHG23VAvcEb4LIxt2TzPiqwUVOey0q0gceL5E8hgC5yCWtOjYEJHjkv/VM8QhmQk0LjlCGmjtZl9qXrwYCOnZAEjAhP4BR2vjhX4eAg+5lGI5m5FfNsbk3KCOSiI0n4JB03ACMhbm/LqXVAr8iRydBVYDNubJtbZsf0RzWDCkFgVYfBp5l4j2yZr1XPAOomaofTm2KojYlxGPr9If9EmXJT8HSKfTx4Do3eutsMYg9TT0yp+F0v/C3ITS62r+tUH4EoKBaxQwa1gWbQN25xeEw6yAzg1T1nH7XSzhnsQIDAQAB",
+
